[package]
name = "survey-tool-cli"
description = "Command line tool accompanying the survey-tool. Allows operations on survey configuration files."
authors = ["Felix Zinkel"]
license = "MIT"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["cargo", "derive"] }
colored = "3.0.0"
jsonschema = "0.38.1"
regex = "1.12.2"
serde-saphyr = "0.0.12"
serde_json = "1.0.148"
